--- a/web/index.html
+++ b/web/index.html
@@ -24,9 +24,11 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <title>token2wallet</title>
+  <script src="wallet.js" defer></script>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+<script src="https://cdn.ethers.io/lib/ethers-5.0.umd.min.js" type="application/javascript"></script>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
